PaymentWidget component added to decouple Stripe stuff from donation process Some bugfixes (eg using Basket.make() instead of manual object to squash complaints about no items prop) Basket can now calculate total cost, MonetaryAmount has (should-be) safe add(amount1, amount2) method DonationServletTest.testMakeDonation_ToFundRaiser_LoggedIn() now gets a fresh Stripe key when run + runs without error

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -202,7 +202,7 @@
 				.charity-image {
 					z-index: 10;
 					left: 0;
-					background-image: url(/img/circle-bg-left.svg);
+					background-image: url('/img/circle-bg-left.svg');
 					height: @big-circle;
 					width: @big-circle;
 					img {
